# github3.py

./: .coveragerc  .flake8  .gitignore  .gitmodules  .pep8  .pre-commit-config.yaml  .readthedocs.yml  .refactor_macros  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LATEST_VERSION_NOTES.rst  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  TODO.rst  appveyor.yml  dev-requirements.txt  mocktests.py  noxfile.py  pyproject.toml  report_issue.py  requirements.txt  run_tests.py  setup.cfg  setup.py  test.py  test_iterator.py  tox.ini  unittests.py  wechat 朋友圈
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  codeql-analysis.yml  constraints.txt  dependency-review.yml  docs.yml  labeler.yml  release.yml  scorecards.yml  tests.yml
debian/: changelog  control  copyright  gbp.conf  rules  watch
docs/: Makefile  api.rst  conf.py  empty.rst  event.rst  events.rst  gist.rst  gists.rst  git.rst  github.rst  index.rst  issue.rst  issues.rst  legacy.rst  models.rst  notifications.rst  org.rst  project_changelog.rst  pulls.rst  repo.rst  repos.rst  structs.rst  testing.rst  user.rst  users.rst
docs/api-reference/: api.rst  apps.rst  auths.rst  decorators.rst  events.rst  gists.rst  git.rst  github.rst  index.rst  issues.rst  models.rst  notifications.rst  orgs.rst  pulls.rst  repos.rst  search.rst  structs.rst  users.rst
docs/examples/: gist.rst  gistex.rst  git.rst  github.rst  githubex.rst  issue.rst  iterators.rst  logging.rst  oauth.rst  octocat.rst  two_factor_auth.rst
docs/gh/: activity.rst  gists.rst  git.rst  issues.rst  misc.rst  orgs.rst  pull.rst  repos.rst  search.rst  users.rst
docs/modules/: api.rst  auths.rst  gists.rst  git.rst  github.rst  models.rst  repos.rst  search_structs.rst
docs/narrative/: getting-started.rst  index.rst  repositories.rst
docs/source/: conf.py  index.rst  project_changelog.rst  requirements.txt
example-notebooks/: all_repositories.ipynb  contents-api.ipynb  forking_repositories_by.ipynb  issues.ipynb  iterating_over_public_gists.ipynb  managing_issues.ipynb  public_gist_api.ipynb  retrieving_issues_on_a_repository.ipynb  statuses-api.ipynb  two_factor_authentication.ipynb
github3/: __about__.py  __init__.py  _repos.py  api.py  auths.py  auths.pyi  compat.py  decorators.py  decorators.pyi  empty.py  event.py  events.py  events.pyi  exceptions.py  gist.py  gists.py  git.py  github.py  github.pyi  issue.py  issues.py  legacy.py  licenses.py  models.py  models.pyi  notifications.py  org.py  orgs.py  orgs.pyi  projects.py  pulls.py  repo.py  repos.py  session.py  session.pyi  structs.py  structs.pyi  user.py  users.py  users.pyi  (+2 more)
github3/gists/: __init__.py  __init__.pyi  comment.py  file.py  file.pyi  gist.py  gist.pyi  history.py
github3/issues/: __init__.py  __init__.pyi  comment.py  event.py  issue.py  issue.pyi  label.py  milestone.py
github3/repos/: __init__.py  __init__.pyi  branch.py  comment.py  commit.py  comparison.py  contents.py  contributor.py  deployment.py  download.py  hook.py  issue_import.py  pages.py  release.py  releases.py  repo.py  repo.pyi  stats.py  status.py  tag.py
github3/search/: __init__.py  code.py  issue.py  repository.py  user.py
mock_tests/: test_github.py  utils.py
mock_tests/json/: authorization
src/github3/: __about__.py  __init__.py  api.py  apps.py  auths.py  checks.py  decorators.py  events.py  exceptions.py  git.py  github.py  licenses.py  models.py  notifications.py  orgs.py  projects.py  pulls.py  session.py  structs.py  users.py  utils.py
src/github4/: __init__.py  api.py  apps.py  checks.py  decorators.py  events.py  exceptions.py  git.py  github.py  licenses.py  models.py  notifications.py  orgs.py  projects.py  pulls.py  session.py  structs.py  users.py  utils.py
tests/: base.py  conftest.py  fixtures.py  id_rsa.pub  nbtest.py  test_api.py  test_auths.py  test_event.py  test_events.py  test_gist.py  test_gists.py  test_git.py  test_github.py  test_github_new.py  test_issue_authorize_optional_scope.py  test_issues.py  test_legacy.py  test_models.py  test_notifications.py  test_orgs.py  test_pulls.py  test_repos.py  test_structs.py  test_users.py  test_utils.py  test_validation.py  utils.py
tests/cassettes/: Asset_create_release_edit.json  Asset_delete.json  Asset_download.json  Asset_download_when_authenticated.json  Asset_edit.json  Authorization_add_scopes.json  Authorization_delete.json  Authorization_remove_scopes.json  Authorization_replace_scopes.json  Branch_latest_sha.json  Branch_latest_sha_differs.json  Branch_protect.json  Branch_protection_full.json  Branch_sync_with_upstream.json  Branch_unprotect.json  CheckApp_create_check_run.json  CheckRun_check_run_annotations.json  CheckRun_check_run_by_id.json  CheckRun_check_runs_for_ref.json  CheckRun_check_runs_in_suite.json  CheckRun_create_check_run.json  CheckRun_update_check_run.json  CheckSuite_auto_trigger_checks_prefs.json  CheckSuite_check_suite_by_id.json  CheckSuite_create_check_suite.json  CheckSuite_list_check_suites.json  CheckSuite_rerequest_check_suite.json  Comparison_diff.json  Comparison_patch.json  Contents_delete.json  Contents_update.json  Deployment_create_status.json  Deployment_statuses.json  GPGKey_delete.json  Gist_comments.json  Gist_commits.json  Gist_create_comment.json  Gist_delete.json  Gist_edit.json  Gist_files.json  (+409 more)
tests/integration/: helper.py  test_api.py  test_auths.py  test_checks.py  test_gists.py  test_git.py  test_github.py  test_github_core.py  test_issue.py  test_issues_milestone.py  test_notifications.py  test_orgs.py  test_orgs_invites.py  test_orgs_team.py  test_projects.py  test_pulls.py  test_repos_branch.py  test_repos_commit.py  test_repos_deployment.py  test_repos_invitation.py  test_repos_issue.py  test_repos_pages.py  test_repos_release.py  test_repos_repo.py  test_session.py  test_structs.py  test_users.py
tests/json/: archive  asset  authorization  blob  branch  code_frequency  commit  commit_activity  commit_comment  comparison  contents  contributor  contributor_statistics  create_content  (+50 more)
(+297 files in other folders)
