[tool.poetry]
name = "github4"
version = "1.4.0"
description = "Python wrapper for the GitHub API"
authors = ["Thiago Carvalho D'Ávila <thiagocavila@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/staticdev/github4.py"
repository = "https://github.com/staticdev/github4.py"
documentation = "https://github4.py.readthedocs.io"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/staticdev/github4.py/releases"

[tool.poetry.dependencies]
python = "^3.7.0"
python-dateutil = "^2.8.1"
requests = "^2.25.1"
jwcrypto = "^0.8"
uritemplate = "^3.0.1"
importlib-metadata = {version = "^1.5.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
mypy = "^0.800"
typeguard = "^2.11.1"
betamax = "^0.8.1"
betamax-matchers = "^0.4.0"
xdoctest = {extras = ["colors"], version = "^0.15.3"}
sphinx = "^3.5.1"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.10.0"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.11.1"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.5.8"
reorder-python-imports = "^2.3.6"
pre-commit-hooks = "^3.4.0"
sphinx-rtd-theme = "^0.5.1"
Pygments = "^2.8.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["github4"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
