[build-system]
requires = ["hatchling>=1.14.1"]
build-backend = "hatchling.build"

[project]
name = "github3.py"
description = "Python wrapper for the GitHub API(http://developer.github.com/v3)"
readme = "README.rst"
requires-python = ">= 3.7"
url = "https://github3.readthedocs.io"
authors = [
  { name = "Ian Stapleton Cordasco", email="graffatcolmingov@gmail.com" },
]
license = "BSD-3-Clause"
license_file = "LICENSE"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]

dynamic = ["version"]

dependencies = [
    "PyJWT[crypto]>=2.3.0",
    "python-dateutil>=2.6.0",
    "requests>=2.18",
    "uritemplate>=3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-xdist[psutil]",
    "betamax>=0.5.1",
    "betamax_matchers>=0.3.0",
]

dev = [
    "github3.py[test]",
    "wheel",
    "build",
    "twine",
    "tox>=3.1.3",
]

[tool.hatch.version]
path = "src/github3/__about__.py"

[tool.hatch.build.targets.sdist]
strict-naming = false

[tool.hatch.build.targets.wheel]
packages = [
  "src/github3",
]
strict-naming = false

[project.urls]
Documentation = "https://github3.readthedocs.io"
Changelog = "https://github3.readthedocs.io/en/latest/release-notes/index.html"
Source = "https://github.com/sigmavirus24/github3.py"
"Released Versions" = "https://github.com/sigmavirus24/github3.py/tags"

[tool.black]
line-length = 78
target-version = ['py37']
safe = true
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
)
'''
