[metadata]
name = github3.py
description = Python wrapper for the GitHub API(http://developer.github.com/v3)
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github3.readthedocs.io
author = Ian Stapleton Cordasco
author_email = graffatcolmingov@gmail.com
license = 3-clause BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
requires_dist =
    requests>=2.0
    uritemplate>=3.0.0
    python-dateutil>=2.6.0
    jwcrypto>=0.5.0

[options]
packages = find:
install_requires =
    jwcrypto>=0.5.0
    python-dateutil>=2.6.0
    requests>=2.18
    uritemplate>=3.0.0
python_requires = >=3.6
package_dir =
    =src

[options.packages.find]
where = src

[wheel]
universal = 1
